Revert "[FIX] Tests alerts"
