# Back/api/categories/categoriescontroller.js
@@ -1,52 +1,0 @@
-const prisma = require('../../lib/prisma');
-
-exports.getCategories = async (req, res) => {
-  try {
-    const categories = await prisma.category.findMany();
-    res.json(categories);
-  } catch (error) {
-    console.error('Erreur lors de la récupération des catégories:', error);
-    res.status(500).json({ error: 'Erreur serveur' });
-  }
-};
-
-exports.createCategory = async (req, res) => {
-  const { name, description } = req.body;
-  try {
-    const newCategory = await prisma.category.create({
-      data: { name, description },
-    });
-    res.status(201).json(newCategory);
-  } catch (error) {
-    console.error('Erreur lors de la création de la catégorie:', error);
-    res.status(500).json({ error: 'Erreur serveur' });
-  }
-};
-
-exports.updateCategory = async (req, res) => {
-  const { id } = req.params;
-  const { name, description } = req.body;
-  try {
-    const updatedCategory = await prisma.category.update({
-      where: { id: parseInt(id, 10) },
-      data: { name, description },
-    });
-    res.json(updatedCategory);
-  } catch (error) {
-    console.error('Erreur lors de la mise à jour de la catégorie:', error);
-    res.status(500).json({ error: 'Erreur serveur' });
-  }
-};
-
-exports.deleteCategory = async (req, res) => {
-  const { id } = req.params;
-  try {
-    await prisma.category.delete({
-      where: { id: parseInt(id, 10) },
-    });
-    res.status(204).send();
-  } catch (error) {
-    console.error('Erreur lors de la suppression de la catégorie:', error);
-    res.status(500).json({ error: 'Erreur serveur' });
-  }
-};
