# Back/api/categories/categoriesroutes.js
@@ -1,10 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const { getCategories, createCategory, updateCategory, deleteCategory } = require("./categoriescontroller");
-
-router.get("/", getCategories);
-router.post("/", createCategory);
-router.put("/:id", updateCategory);
-router.delete("/:id", deleteCategory);
-
-module.exports = router;
